@@ -8,7 +8,7 @@ Icon=baobab
 Terminal=false
 Type=Application
 StartupNotify=true
-Categories=GTK;GNOME;System;
+Categories=GTK;GNOME;System;Filesystem;
 NotShowIn=KDE;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-utils
