@@ -6,7 +6,7 @@ Terminal=false
 Type=Application
 Icon=accessories-dictionary.png
 StartupNotify=true
-Categories=GNOME;GTK;Utility;
+Categories=GNOME;GTK;Office;Dictionary;
 NotShowIn=KDE;
 X-GNOME-DocPath=gnome-dictionary/gnome-dictionary.xml
 X-GNOME-Bugzilla-Bugzilla=GNOME
