@@ -6,7 +6,7 @@ Icon=logviewer
 Terminal=false
 Type=Application
 StartupNotify=true
-Categories=GTK;GNOME;System;Monitor;X-Red-Hat-Base;
+Categories=GTK;GNOME;System;Monitor;
 NotShowIn=KDE;
 X-GNOME-DocPath=gnome-system-log/gnome-system-log.xml
 X-GNOME-Bugzilla-Bugzilla=GNOME
