@@ -1,3 +1,11 @@
+2008-09-13  Patryk Zawadzki  <patrys@pld-linux.org>
+
+	* baobab/data/baobab.desktop.in.in: add Filesystem category.
+	* gnome-dictionary/data/gnome-dictionary.desktop.in.in:
+	change category to Office;Dictionary.
+	* logview/gnome-system-log.desktop.in.in: drop X-Red-Hat-Base
+	(#552054).
+
 2008-09-08  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* configure.ac: Post-release bump to 2.23.93
